--- a/hyprtheme.conf
+++ b/hyprtheme.conf
@@ -4,11 +4,11 @@
 
 # Elements
 $hypr_border_size = 2
-$hypr_gaps_in = 5
-$hypr_gaps_out = 10
+$hypr_gaps_in = 3
+$hypr_gaps_out = 3
 $hypr_gaps_ws = -10
 $hypr_rounding = 0
-$groupbar_font_family = Iosevka
+$groupbar_font_family = Jetbrains Mono
 $groupbar_font_size = 10
 
 # Colors
