--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -59,10 +59,10 @@ history = 100000
 multiplier = 3
 
 ## BELL -----------------------------------------------------------
-# [bell]
-# animation = "Linear"
-# duration = 20
-# command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/dialog-error.oga"] }
+[bell]
+animation = "Linear"
+duration = 0
+command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/dialog-error.oga"] }
 
 ## SELECTION ------------------------------------------------------
 [selection]
