--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,12 +1,12 @@
 # Copyright (C) 2020-2024 Aditya Shakya <adi1090x@gmail.com>
 #
 # Hyprland configuration file for Archcraft
-# Hyprland Version: 0.41.2
+# Hyprland Version: 0.48.1
 
 #-- Source Files -----------------------------------------------
 source = ~/.config/hypr/hyprtheme.conf
 
-env = XDG_CURRENT_DESKTOP,sway
+env = XDG_CURRENT_DESKTOP,xcb
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
@@ -19,32 +19,29 @@ general {
 	gaps_workspaces = $hypr_gaps_ws
 	col.active_border = $active_border_col_1 $active_border_col_2 $gradient_angle 
 	col.inactive_border = $inactive_border_col_1 $inactive_border_col_2 $gradient_angle
-	col.nogroup_border = $group_border_col
 	col.nogroup_border_active = $group_border_active_col
 	layout = dwindle
 	no_focus_fallback = false
-	# apply_sens_to_raw = false
 	resize_on_border = true
 	extend_border_grab_area = 15
 	hover_icon_on_border = true
 	allow_tearing = false
 	resize_corner = 0
+	snap {
+		enabled = false
+		window_gap = 10
+		monitor_gap = 10
+		border_overlap = false
+	}
 }
 
 #-- Decoration -------------------------------------------------
 decoration {
 	rounding = $hypr_rounding
+	rounding_power = 2.0
 	active_opacity = 1.0
 	inactive_opacity = 0.95
 	fullscreen_opacity = 1.0
-	drop_shadow = true
-	shadow_range = 25
-	shadow_render_power = 3
-	shadow_ignore_window = false
-	col.shadow = $active_shadow_col
-	col.shadow_inactive = $inactive_shadow_col
-	shadow_offset = 0 0
-	shadow_scale = 1.0
 	dim_inactive = false
 	dim_strength = 0.5
 	dim_special = 0.2
@@ -65,6 +62,19 @@ decoration {
 		special = true
 		popups = false
 		popups_ignorealpha = 0.2
+		input_methods = false
+		input_methods_ignorealpha = 0.2
+	}
+	shadow {
+		enabled = true
+		range = 25
+		render_power = 3
+		sharp = false
+		ignore_window = false
+		color = $active_shadow_col
+		color_inactive = $inactive_shadow_col
+		offset = 0 0
+		scale = 1.0
 	}
 }
 
@@ -86,8 +96,10 @@ animations {
 	animation = fadeLayersOut,1,8,default
 	animation = border,1,20,default
 	animation = borderangle,1,20,default,once
-	animation = workspaces, 1,5,default,slide
-	animation = specialWorkspace,1,5,default,fade
+	animation = workspacesIn, 1,5,default,slide
+	animation = workspacesOut, 1,5,default,slide
+	animation = specialWorkspaceIn,1,5,default,fade
+	animation = specialWorkspaceOut,1,5,default,fade
 }
 
 #-- Input: Keyboard, Mouse, Touchpad ---------------------------
@@ -113,10 +125,12 @@ input {
 	scroll_factor = 1.0
 	natural_scroll = false
 	follow_mouse = 1
+	focus_on_close = 0
 	mouse_refocus = true
 	float_switch_override_focus = 1
 	special_fallthrough = false
 	off_window_axis_events = 1
+	emulate_discrete_scroll = 1
 	touchpad {
 		disable_while_typing = true
 		natural_scroll = false
@@ -127,6 +141,8 @@ input {
 		tap-to-click = true
 		drag_lock = false
 		tap-and-drag = true
+		flip_x = false
+		flip_y = false
 	}
 	touchdevice {
 		enabled = true
@@ -137,6 +153,7 @@ input {
 		transform = 0
 		output = 
 		region_position = 0 0
+		absolute_region_position = false
 		region_size = 0 0
 		relative_input = false
 		left_handed = false
@@ -153,6 +170,7 @@ gestures {
 	workspace_swipe_distance = 300
 	workspace_swipe_touch = false
 	workspace_swipe_invert = true
+	workspace_swipe_touch_invert = false
 	workspace_swipe_min_speed_to_force = 30
 	workspace_swipe_cancel_ratio = 0.5
 	workspace_swipe_create_new = true
@@ -164,8 +182,14 @@ gestures {
 
 #-- Group ------------------------------------------------------
 group {
+	auto_group = true
 	insert_after_current = true 
 	focus_removed_window = true
+	drag_into_group = 1
+	merge_groups_on_drag = true
+	merge_groups_on_groupbar = true
+	merge_floated_into_tiled_on_groupbar = false
+	group_on_movetoworkspace = false
 	col.border_active = $group_border_active_col
 	col.border_inactive = $group_border_inactive_col
 	col.border_locked_active = $group_border_locked_active_col
@@ -176,15 +200,22 @@ group {
 		font_size = $groupbar_font_size
 		gradients = true
 		height = 14
+		indicator_height = 3
 		stacked = false
 		priority = 3
 		render_titles = true
 		scrolling = true
+		rounding = 1
+		gradient_rounding = 2
+		round_only_edges = true
+		gradient_round_only_edges = true
 		text_color = $groupbar_text_color
 		col.active = $group_border_active_col
 		col.inactive = $group_border_inactive_col
 		col.locked_active = $group_border_locked_active_col
 		col.locked_inactive = $group_border_locked_inactive_col
+		gaps_in = 2
+		gaps_out = 2
 	}
 }
 
@@ -209,7 +240,6 @@ misc {
 	swallow_regex = 
 	swallow_exception_regex = 
 	focus_on_activate = true
-	# no_direct_scanout = false
 	mouse_move_focuses_monitor = true
 	render_ahead_of_time = false
 	render_ahead_safezone = 1
@@ -217,8 +247,14 @@ misc {
 	background_color = 0x000000
 	close_special_on_empty = true
 	new_window_takes_over_fullscreen = 0
+	exit_window_retains_fullscreen = false
 	initial_workspace_tracking = 1
 	middle_click_paste = true
+	render_unfocused_fps = 15
+	disable_xdg_env_checks = false
+	disable_hyprland_qtutils_check = false
+	lockdead_screen_delay = 1000
+	enable_anr_dialog = true
 }
 
 #-- Binds ------------------------------------------------------
@@ -231,24 +267,40 @@ binds {
 	focus_preferred_method = 0
 	ignore_group_lock = false
 	movefocus_cycles_fullscreen = true
+	movefocus_cycles_groupfirst = false
 	disable_keybind_grabbing = false
 	window_direction_monitor_fallback = true
+	allow_pin_fullscreen = false
 }
 
 #-- Xwayland ---------------------------------------------------
 xwayland {
+	enabled = true
 	use_nearest_neighbor = true
 	force_zero_scaling = false
+	create_abstract_socket = false
 }
 
 #-- OpenGL -----------------------------------------------------
 opengl {
 	nvidia_anti_flicker = true
-	force_introspection = 2
+}
+
+#-- Render -----------------------------------------------------
+render {
+	explicit_sync = 2
+	explicit_sync_kms = 2
+	direct_scanout = false
+	expand_undersized_textures = true
+	xp_mode = false
+	ctm_animation = 2
+	cm_fs_passthrough = 2
+	cm_enabled = true
 }
 
 #-- Cursor -----------------------------------------------------
 cursor {
+	sync_gsettings_theme = true
 	no_hardware_cursors = false
 	no_break_fs_vrr = false
 	min_refresh_rate = 24
@@ -263,6 +315,8 @@ cursor {
 	enable_hyprcursor = true
 	hide_on_key_press = false
 	hide_on_touch = false
+	use_cpu_buffer = false
+	warp_back_after_non_mouse_input = false
 }
 
 #-- Hyprcursor -------------------------------------------------
@@ -274,6 +328,16 @@ cursor {
 #env = HYPRCURSOR_THEME,MyCursor
 #env = HYPRCURSOR_SIZE,24
 
+# Using XCursor, Comment out to disable it.
+env = XCURSOR_THEME, Sweet
+env = XCURSOR_SIZE, 16
+
+#-- Update Popup -----------------------------------------------
+ecosystem {
+	no_update_news = false
+	no_donation_nag = false
+}
+
 #-- Debug (Only for developers) --------------------------------
 debug {
 	overlay = false
@@ -284,11 +348,13 @@ debug {
 	enable_stdout_logs = false
 	manual_crash = 0
 	suppress_errors = false
-	watchdog_timeout = 5
+	# watchdog_timeout = 5
 	disable_scale_checks = false
 	error_limit = 5
 	error_position = 0
 	colored_stdout_logs = true
+	pass = false
+	full_cm_proto = false
 }
 
 #-- Multi GPUs -------------------------------------------------
@@ -314,8 +380,17 @@ debug {
 #layerrule = blur,waybar
 
 #-- Output -----------------------------------------------------
-monitor = DP-1,2560x1440@60,2560x0,1
-monitor = HDMI-A-1,2560x1440@60,0x0,1
+# monitor = ,preferred,auto,1
+monitor = DP-3,5120x1440@240,0x0,1
+monitor = DP-1,2560x1440@60,0x-1440,1,transform,2
+monitor = HDMI-A-1,1920x1200@60,2560x-1200,1,transform,2
+# monitor = HDMI-A-1,2560x1440@60,0x0,1
+workspace = DP-3,1
+workspace = DP-3,2
+workspace = DP-1,3
+workspace = HDMI-A-1,8
+workspace = HDMI-A-1,9
+
 
 # Example : 
 #~ Laptop screen, mode: 1920x1080, scale: 1, gaps of 10 each side
@@ -324,12 +399,10 @@ monitor = HDMI-A-1,2560x1440@60,0x0,1
 #monitor = eDP-1,transform,0
 #workspace = eDP-1,1
 #~ External monitor, mode: 1920x1080, position: right of laptop, scale: 1.5, gaps of 20 each side, rotated 90d
+#monitor = HDMI-A-1,1920x1080@60,1920x0,1.5
 #monitor = HDMI-A-1,addreserved,20,20,20,20
 #monitor = HDMI-A-1,transform,1
 #workspace = HDMI-A-1,2
-workspace = HDMI-A-1,1
-workspace = HDMI-A-1,2
-workspace = DP-1,3
 
 # Workspace Rules
 #workspace = 3, rounding:false, decorate:false
@@ -347,19 +420,17 @@ dwindle {
 	permanent_direction_override = false
 	special_scale_factor = 0.8
 	split_width_multiplier = 1.0
-	no_gaps_when_only = false
 	use_active_for_splits = true
 	default_split_ratio = 1.0
+	split_bias = 0
 }
 
 $notifycmd = notify-send -h string:x-canonical-private-synchronous:hypr-cfg -u low
 bind = SUPER, G, togglegroup
 bind = SUPER, E, moveoutofgroup
 bind = SUPER, G, exec, $notifycmd 'Toggled Group Mode'
-bind = SUPER, H, changegroupactive, b
-bind = SUPER, L, changegroupactive, f
-# bind = SUPER, A, changegroupactive, b
-# bind = SUPER, D, changegroupactive, f
+# bind = SUPER, H, changegroupactive, b
+# bind = SUPER, L, changegroupactive, f
 bind = SUPER_SHIFT, L, lockactivegroup, toggle
 bind = SUPER_SHIFT, L, exec, $notifycmd 'Toggled Group Lock'
 
@@ -371,36 +442,39 @@ master {
 	new_status = slave
 	new_on_top = false
 	new_on_active = none
-	no_gaps_when_only = false
 	orientation = left
 	inherit_fullscreen = true
-	always_center_master = false
+	slave_count_for_center_master = 2
+	# center_master_slaves_on_right = true
 	smart_resizing = true
 	drop_at_cursor = true
+	always_keep_position = false
 }
 
 #-- Window Rules -----------------------------------------------
-windowrule = float, foot-float|alacritty-float
-windowrule = float, yad|nm-connection-editor|pavucontrolk
-windowrule = float, xfce-polkit|kvantummanager|qt5ct
-windowrule = float, feh|Viewnior|Gpicview|Gimp|MPlayer
-windowrule = float, VirtualBox Manager|qemu|Qemu-system-x86_64
-windowrule = float, title:File Operation Progress
-windowrule = float, title:Confirm to replace files
+windowrule = float, class: foot-float|alacritty-float|kitty-float
+windowrule = float, class: yad|nm-connection-editor|pavucontrolk
+windowrule = float, class: xfce-polkit|kvantummanager|qt5ct
+windowrule = float, class: feh|Viewnior|Gpicview|Gimp|MPlayer
+windowrule = float, class: VirtualBox Manager|qemu|Qemu-system-x86_64
+windowrule = float, title: File Operation Progress
+windowrule = float, title: Confirm to replace files
 
-windowrule = float, Yad|yad
-windowrule = size 60% 64%, Yad|yad
+windowrule = float,        class: Yad|yad
+windowrule = size 60% 64%, class: Yad|yad
 
-windowrule = float, io.calamares.calamares
-windowrule = center, io.calamares.calamares
+windowrule = float,        class: io.calamares.calamares
+windowrule = center,       class: io.calamares.calamares
 
-windowrule = float,title:^(Archcraft Installer)(.*)$
+windowrule = float,        title:^(Archcraft Installer)(.*)$
 
-windowrule = size 60% 64%, Viewnior
-windowrule = center, Viewnior
+windowrule = size 60% 64%, class: Viewnior
+windowrule = center,       class: Viewnior
 
-windowrule = animation slide down,foot-full
-windowrule = animation slide up,wlogout
+windowrule = animation slide down, class: foot-full
+windowrule = animation slide up,   class: wlogout
+
+windowrule = size 785 450,         class: Alacritty|alacritty|alacritty-float
 
 #windowrule = float,WINDOW
 #windowrule = tile,WINDOW
@@ -434,6 +508,7 @@ windowrule = animation slide up,wlogout
 #-- Keybindings ------------------------------------------------
 $alacritty   = ~/.config/hypr/scripts/alacritty
 $foot        = ~/.config/hypr/scripts/foot
+$kitty       = ~/.config/hypr/scripts/kitty
 $volume      = ~/.config/hypr/scripts/volume
 $backlight   = ~/.config/hypr/scripts/brightness
 $screenshot  = ~/.config/hypr/scripts/screenshot
@@ -446,10 +521,9 @@ $browser     = firefox
 
 $rofi_launcher    = ~/.config/hypr/scripts/rofi_launcher
 $rofi_runner      = ~/.config/hypr/scripts/rofi_runner
-$rofi_windows      = ~/.config/hypr/scripts/rofi_windows
 $rofi_music       = ~/.config/hypr/scripts/rofi_music
 $rofi_network     = ~/.config/hypr/scripts/rofi_network
-$rofi_ssh   = ~/.config/hypr/scripts/rofi_ssh
+$rofi_bluetooth   = ~/.config/hypr/scripts/rofi_bluetooth
 $rofi_powermenu   = ~/.config/hypr/scripts/rofi_powermenu
 $rofi_screenshot  = ~/.config/hypr/scripts/rofi_screenshot
 $rofi_asroot      = ~/.config/hypr/scripts/rofi_asroot
@@ -467,6 +541,11 @@ bind = SUPER,       T,      exec, $alacritty -F
 #bind = SUPER_SHIFT, Return, exec, $foot -f
 #bind = SUPER_ALT,   Return, exec, $foot -s
 #bind = SUPER,       T,      exec, $foot -F
+
+# -- Terminal : kitty --
+#bind = SUPER,       Return, exec, $kitty
+#bind = SUPER_SHIFT, Return, exec, $kitty -f
+#bind = SUPER,       T,      exec, $kitty -F
 
 # -- Apps --
 bind = SUPER_SHIFT, F, exec, $files
@@ -528,10 +607,8 @@ bind = SUPER,       Space,  togglefloating,
 bind = SUPER,       Space,  centerwindow,
 
 # Change Focus
-bind = SUPER, A, movefocus, l
-bind = SUPER, D, movefocus, l
-# bind = SUPER, left,  movefocus, l
-# bind = SUPER, right, movefocus, r
+bind = SUPER, A,     movefocus, l
+bind = SUPER, D,     movefocus, r
 bind = SUPER, up,    movefocus, u
 bind = SUPER, down,  movefocus, d
 
@@ -567,7 +644,7 @@ bind = SUPER, 6, workspace, 6
 bind = SUPER, 7, workspace, 7
 bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
+bind = SUPER, 0, workspace, 0
 bind = SUPER, MINUS, togglespecialworkspace, special
 
 # Send to Workspaces
@@ -580,7 +657,7 @@ bind = SUPER_SHIFT, 6, movetoworkspace, 6
 bind = SUPER_SHIFT, 7, movetoworkspace, 7
 bind = SUPER_SHIFT, 8, movetoworkspace, 8
 bind = SUPER_SHIFT, 9, movetoworkspace, 9
-bind = SUPER_SHIFT, 0, movetoworkspace, 10
+bind = SUPER_SHIFT, 0, movetoworkspace, 0
 bind = SUPER_SHIFT, MINUS, movetoworkspace, special
 
 # Seamless Workspace Switching
@@ -599,7 +676,6 @@ bind = SUPER_CTRL, S, exec, $notifycmd 'Toggled All Pseudo Mode'
 bind = SUPER_SHIFT, P, pin,
 bind = SUPER_SHIFT, P, exec, $notifycmd 'Toggled Pin'
 bind = SUPER_SHIFT, S, swapnext
-# bind = SUPER_SHIFT, O, toggleopaque
 bindl = ,switch:Lid Switch, exec, $lockscreen
 
 #-- Mouse Buttons ----------------------------------------------
