--- a/alacritty/colors.toml
+++ b/alacritty/colors.toml
@@ -1,24 +1,24 @@
 ## Colors configuration
 [colors.primary]
-background = "#0F161C"
-foreground = "#c0cbcb"
+background = "#121212"
+foreground = "#e2e3e3"
 
 [colors.normal]
-black   = "#0F161C"
-red     = "#50696F"
-green   = "#9D632C"
-yellow  = "#F59E0A"
-blue    = "#5B7C83"
-magenta = "#5F8188"
-cyan    = "#68888D"
-white   = "#c0cbcb"
+black   = "#121212"
+red     = "#D17805"
+green   = "#F39004"
+yellow  = "#F39C13"
+blue    = "#C19862"
+magenta = "#798284"
+cyan    = "#A2A29F"
+white   = "#e2e3e3"
 
 [colors.bright]
-black   = "#868e8e"
-red     = "#50696F"
-green   = "#9D632C"
-yellow  = "#F59E0A"
-blue    = "#5B7C83"
-magenta = "#5F8188"
-cyan    = "#68888D"
-white   = "#c0cbcb"
+black   = "#9e9e9e"
+red     = "#D17805"
+green   = "#F39004"
+yellow  = "#F39C13"
+blue    = "#C19862"
+magenta = "#798284"
+cyan    = "#A2A29F"
+white   = "#e2e3e3"
