--- a/hypridle.conf
+++ b/hypridle.conf
@@ -33,7 +33,7 @@ listener {
 }
 
 # suspend pc
-# listener {
-#     timeout = 900
-#     on-timeout = systemctl suspend
-# }
+listener {
+    timeout = 900
+    on-timeout = systemctl suspend
+}
