--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -6,6 +6,20 @@ general {
 	no_fade_in = false
 	no_fade_out = false
 	ignore_empty_input = false
+	immediate_render = false
+	text_trim = true
+	fractional_scaling = 2
+	screencopy_mode = 0
+}
+
+#-- Authentication ---------------------------------------------
+auth {
+	pam:enabled = true
+	pam:module = hyprlock
+	fingerprint:enabled = false
+	fingerprint:ready_message = (Scan fingerprint to unlock)
+	fingerprint:present_message = Scanning fingerprint
+	fingerprint:retry_delay = 250
 }
 
 #-- Background -------------------------------------------------
@@ -20,6 +34,9 @@ background {
     brightness = 0.8500
     vibrancy = 0.1500
     vibrancy_darkness = 0.0
+    reload_time = -1
+    reload_cmd = 
+    zindex = -1
 }
 
 #-- Image ------------------------------------------------------
@@ -30,10 +47,19 @@ background {
 #    rounding = -1
 #    border_size = 4
 #    border_color = rgb(221, 221, 221)
+#	 rotate = 0
+#	 reload_time = -1
+#	 reload_cmd = 
 #
 #    position = 0, 200
 #    halign = center
 #    valign = center
+#    zindex = 0
+#
+#	shadow_passes = 3
+#	shadow_size = 6
+#	shadow_color = rgb(0, 0, 0)
+#	shadow_boost = 0.0
 #}
 
 #-- Input ------------------------------------------------------
@@ -45,9 +71,12 @@ input-field {
     dots_spacing = 0.25
     dots_center = false
     dots_rounding = -2
+    dots_fade_time = 200
+    dots_text_format = 
     outer_color = rgb(70, 84, 99)
     inner_color = rgb(70, 84, 99)
     font_color = rgb(241, 252, 249)
+    font_family = Iosevka Bold
     fade_on_empty = true
     fade_timeout = 1000
     placeholder_text = <i>Enter Password</i>
@@ -56,6 +85,7 @@ input-field {
     check_color = rgb(180, 161, 219)
     fail_color = rgb(219, 134, 186)
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    fail_timeout = 2000
     fail_transition = 300
     capslock_color = -1
     numlock_color = -1
@@ -66,7 +96,8 @@ input-field {
     position = 0, -50
     halign = center
     valign = center
-
+	zindex = 0
+	
 	shadow_passes = 3
 	shadow_size = 6
 	shadow_color = rgb(0, 0, 0)
@@ -79,10 +110,12 @@ input-field {
 label {
     monitor =
     text = $TIME
+    text_align = center
     color = rgb(241, 252, 249)
     font_size = 48
     font_family = Iosevka Bold
 
+	rotate = 0
     position = 0, 300
     halign = center
     valign = center
@@ -96,7 +129,8 @@ label {
 # User
 label {
     monitor =
-    text = Hi <span foreground='##DB86BA'> <b>$USER</b></span> 
+    text = Hi <span foreground='##DB86BA'>  <b>$USER</b></span> 
+    text_align = center
     color = rgb(241, 252, 249)
     font_size = 24
     font_family = Iosevka
@@ -114,7 +148,8 @@ label {
 # Icon
 label {
     monitor =
-    text = <span foreground='##DB86BA'></span>
+    text = <span foreground='##DB86BA'></span>
+    text_align = center
     color = rgb(241, 252, 249)
     font_size = 64
     font_family = Iosevka
