--- a/hyprtheme.conf
+++ b/hyprtheme.conf
@@ -4,23 +4,23 @@
 
 # Elements
 $hypr_border_size = 2
-$hypr_gaps_in = 3
-$hypr_gaps_out = 3
+$hypr_gaps_in = 5
+$hypr_gaps_out = 10
 $hypr_gaps_ws = -10
 $hypr_rounding = 0
-$groupbar_font_family = Jetbrains Mono
+$groupbar_font_family = Iosevka
 $groupbar_font_size = 10
 
 # Colors
 $gradient_angle = 45deg
-$active_border_col_1 = 0xFF5B7C83
-$active_border_col_2 = 0xFF50696F
-$inactive_border_col_1 = 0xFF18232c
-$inactive_border_col_2 = 0xFF21303d
+$active_border_col_1 = 0xFFC19862
+$active_border_col_2 = 0xFFD17805
+$inactive_border_col_1 = 0xFF1f1f1f
+$inactive_border_col_2 = 0xFF2c2c2c
 $active_shadow_col = 0x66000000
 $inactive_shadow_col = 0x66000000
-$group_border_active_col = 0xFF9D632C
-$group_border_inactive_col = 0xFFF59E0A
-$group_border_locked_active_col = 0xFF50696F
-$group_border_locked_inactive_col = 0xFF5B7C83
-$groupbar_text_color = 0xFFc0cbcb
+$group_border_active_col = 0xFFF39004
+$group_border_inactive_col = 0xFFF39C13
+$group_border_locked_active_col = 0xFFD17805
+$group_border_locked_inactive_col = 0xFFC19862
+$groupbar_text_color = 0xFFe2e3e3
