--- a/hyprland.conf
+++ b/hyprland.conf
@@ -19,7 +19,7 @@ general {
 	gaps_workspaces = $hypr_gaps_ws
 	col.active_border = $active_border_col_1 $active_border_col_2 $gradient_angle 
 	col.inactive_border = $inactive_border_col_1 $inactive_border_col_2 $gradient_angle
-	col.nogroup_border = $group_border_col
+	# col.nogroup_border = $group_border_col
 	col.nogroup_border_active = $group_border_active_col
 	layout = dwindle
 	no_focus_fallback = false
@@ -37,14 +37,14 @@ decoration {
 	active_opacity = 1.0
 	inactive_opacity = 0.95
 	fullscreen_opacity = 1.0
-	drop_shadow = true
-	shadow_range = 25
-	shadow_render_power = 3
-	shadow_ignore_window = false
-	col.shadow = $active_shadow_col
-	col.shadow_inactive = $inactive_shadow_col
-	shadow_offset = 0 0
-	shadow_scale = 1.0
+	# drop_shadow = true
+	# shadow_range = 25
+	# shadow_render_power = 3
+	# shadow_ignore_window = false
+	# col.shadow = $active_shadow_col
+	# col.shadow_inactive = $inactive_shadow_col
+	# shadow_offset = 0 0
+	# shadow_scale = 1.0
 	dim_inactive = false
 	dim_strength = 0.5
 	dim_special = 0.2
@@ -244,7 +244,7 @@ xwayland {
 #-- OpenGL -----------------------------------------------------
 opengl {
 	nvidia_anti_flicker = true
-	force_introspection = 2
+	# force_introspection = 2
 }
 
 #-- Cursor -----------------------------------------------------
@@ -284,7 +284,7 @@ debug {
 	enable_stdout_logs = false
 	manual_crash = 0
 	suppress_errors = false
-	watchdog_timeout = 5
+	# watchdog_timeout = 5
 	disable_scale_checks = false
 	error_limit = 5
 	error_position = 0
@@ -314,8 +314,7 @@ debug {
 #layerrule = blur,waybar
 
 #-- Output -----------------------------------------------------
-monitor = DP-1,2560x1440@60,2560x0,1
-monitor = HDMI-A-1,2560x1440@60,0x0,1
+monitor = DP-1,3440x1440@60,2560x0,1
 
 # Example : 
 #~ Laptop screen, mode: 1920x1080, scale: 1, gaps of 10 each side
@@ -327,9 +326,9 @@ monitor = HDMI-A-1,2560x1440@60,0x0,1
 #monitor = HDMI-A-1,addreserved,20,20,20,20
 #monitor = HDMI-A-1,transform,1
 #workspace = HDMI-A-1,2
-workspace = HDMI-A-1,1
-workspace = HDMI-A-1,2
-workspace = DP-1,3
+# workspace = HDMI-A-1,1
+# workspace = HDMI-A-1,2
+# workspace = DP-1,3
 
 # Workspace Rules
 #workspace = 3, rounding:false, decorate:false
@@ -347,7 +346,7 @@ dwindle {
 	permanent_direction_override = false
 	special_scale_factor = 0.8
 	split_width_multiplier = 1.0
-	no_gaps_when_only = false
+	# no_gaps_when_only = false
 	use_active_for_splits = true
 	default_split_ratio = 1.0
 }
@@ -371,36 +370,36 @@ master {
 	new_status = slave
 	new_on_top = false
 	new_on_active = none
-	no_gaps_when_only = false
+	# no_gaps_when_only = false
 	orientation = left
 	inherit_fullscreen = true
-	always_center_master = false
+	# always_center_master = false
 	smart_resizing = true
 	drop_at_cursor = true
 }
 
 #-- Window Rules -----------------------------------------------
-windowrule = float, foot-float|alacritty-float
-windowrule = float, yad|nm-connection-editor|pavucontrolk
-windowrule = float, xfce-polkit|kvantummanager|qt5ct
-windowrule = float, feh|Viewnior|Gpicview|Gimp|MPlayer
-windowrule = float, VirtualBox Manager|qemu|Qemu-system-x86_64
-windowrule = float, title:File Operation Progress
-windowrule = float, title:Confirm to replace files
+# windowrule = float, foot-float|alacritty-float
+# windowrule = float, yad|nm-connection-editor|pavucontrolk
+# windowrule = float, xfce-polkit|kvantummanager|qt5ct
+# windowrule = float, feh|Viewnior|Gpicview|Gimp|MPlayer
+# windowrule = float, VirtualBox Manager|qemu|Qemu-system-x86_64
+# windowrule = float, title:File Operation Progress
+# windowrule = float, title:Confirm to replace files
 
-windowrule = float, Yad|yad
-windowrule = size 60% 64%, Yad|yad
+# windowrule = float, Yad|yad
+# windowrule = size 60% 64%, Yad|yad
 
-windowrule = float, io.calamares.calamares
-windowrule = center, io.calamares.calamares
+# windowrule = float, io.calamares.calamares
+# windowrule = center, io.calamares.calamares
 
-windowrule = float,title:^(Archcraft Installer)(.*)$
+# windowrule = float,title:^(Archcraft Installer)(.*)$
 
-windowrule = size 60% 64%, Viewnior
-windowrule = center, Viewnior
+# windowrule = size 60% 64%, Viewnior
+# windowrule = center, Viewnior
 
-windowrule = animation slide down,foot-full
-windowrule = animation slide up,wlogout
+# windowrule = animation slide down,foot-full
+# windowrule = animation slide up,wlogout
 
 #windowrule = float,WINDOW
 #windowrule = tile,WINDOW
